# desktop_pet

./: .clangd  Containerfile  README.md  build.sh  container_file  meson.build  performance.md  readme.md  vulnerabilities.md
_todo/: win_tray.c  win_window.c
_todo/core/events/: event.h
_todo/core/features/: console.h  window.h
_todo/core/layers/: layers.h
_todo/main/: main.c
_todo/utils/platform/: systray.h  window.h
_todo/utils/platform/linux/: linux_window.c
src/: CMakeLists.txt  main.c
src/application/: application.c  application.h
src/core/: core.c
src/core/events/: event.h
src/core/features/: notifications.h  window.h
src/core/layers/: layers.c
src/core/runtime/: runtime.c  runtime.h
src/game/entities/: animal.c  animal.h  food.c
src/logger/: logger.h
src/main/: main.c
src/physics/: physics.c  physics.h
src/renderer/: renderer.c  renderer.h
src/todo/core/: core.h
src/todo/core/events/: event.c
src/todo/core/features/: tray.h
src/todo/core/runtime/: runtime.c  runtime.h
src/todo/linux/: x11_window.c
src/tray/: linux_tray.c  tray.h  win_tray.c
src/utils/: fastcmp.h
src/utils/data-structures/stack/: stack.c  stack.h
src/utils/logger/: logger.h
src/window/: linux_window.c  window.h  windows_window.c
